# OpenAI-Hackathon

./: .dockerignore  .gitignore  MSITM_ FAQ - McCombs School of Business.html  README.md  docker-compose.yml  package-lock.json  package.json
FAQ documents/: msitm_faq.md
apps/api/: .env.example  Dockerfile  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial.py
apps/api/app/: main.py
apps/api/app/api/: __init__.py  admin.py  ai.py  ambassadors.py  auth.py  dependencies.py  me.py  meetings.py
apps/api/app/core/: config.py  security.py
apps/api/app/db/: session.py
apps/api/app/models/: __init__.py  entities.py
apps/api/app/schemas/: __init__.py  admin.py  ai.py  ambassadors.py  auth.py  common.py  meetings.py
apps/api/app/scripts/: seed_demo.py
apps/api/app/services/: availability.py  knowledge.py  matching.py  presenters.py
apps/api/tests/: conftest.py  test_api_flows.py  test_availability.py  test_matching.py
apps/web/: .env.local.example  Dockerfile  eslint.config.mjs  next.config.ts  package.json  tailwind.config.ts  tsconfig.json  wrangler.jsonc
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/admin/: page.tsx
apps/web/app/ambassadors/: page.tsx
apps/web/app/ambassadors/[id]/: page.tsx
apps/web/app/ask/: page.tsx
apps/web/app/meetings/: page.tsx
apps/web/components/: ambassador-card.tsx  app-shell.tsx  booking-calendar.tsx  meeting-card.tsx  session-provider.tsx  status-badge.tsx
apps/web/lib/: api.ts  types.ts
skills/ambassador-connect-context/: SKILL.md
(+3 files in other folders)
